[tool.poetry]
name = "calibration-generator"
version = "1.3.1"
description = ""
authors = ["prahjister <prahjister0@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
pyqt5ac = "^1.2.1"


[tool.poetry.dev-dependencies]
pyinstaller = "^4.5.1"
pyuic5-tool = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
